# coding-fighter-front

./: .env  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  nginx.conf
.github/workflows/: ci.yml  publish.yml
src/: main.rs
src/client/: game_client.rs  mod.rs
src/components/: button_components.rs  create_game_component.rs  form_input.rs  game_hub_component.rs  game_result_component.rs  join_game_component.rs  loading_button_component.rs  login_component.rs  logout_component.rs  mod.rs  public_games_component.rs  social_media_components.rs  sprinner_component.rs
src/dto/: answer.rs  game_dto.rs  game_progress_dto.rs
src/helpers/: local_storage.rs
src/model/: game.rs
src/sse/: mod.rs  sse.rs
