[package]
name = "coding-fighters-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.61", features = ["FormData", "HtmlFormElement"] }