[package]
name = "coding-fighters-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.61", features = ["FormData", "HtmlFormElement","HtmlDocument"] }
gloo = "0.11.0"
gloo-storage = "0.3.0"
gloo-net = "0.5.0"
js-sys = "0.3.66"
regex = "1.10.2"
serde_json = "1.0.109"
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
strum = "0.25.0"
strum_macros = { version = "0.25.3", features = [] }
material-yew = { version = "0.3.0", features = ["checkbox"] }
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
